Update contact information in contact.html

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                   <i class="bi bi-geo-alt"></i>
                 </div>
                 <div class="content">
-                  <h4>Our Location</h4>
+                  <h4>Location</h4>
                   <p>Nairobi County</p>
                   <p>Kenya</p>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="content">
                   <h4>Phone Number</h4>
                   <p>+254720821051</p>
-                  <p>Preferred: LinkedIn message</p>
+                  <p>Preferred: Email</p>
                 </div>
               </div>
 
