Update email address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>reagan.ochola@gmail.com</p>
+                  <p>reaochola@gmail.com</p>
                   <p>Via LinkedIn: reagan-ochola-aba10927</p>
                 </div>
               </div>
