--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - FolioOne Bootstrap Template</title>
+  <title>Portfolio Details - Reagan Ochola</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -13,9 +13,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 
@@ -79,7 +79,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -93,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio Details</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>Comprehensive quantitative analysis of 5,016 MSME manufacturing firms across Kenya, demonstrating expertise in data analysis, quantitative reasoning, and translating insights into actionable recommendations.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -129,13 +129,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/portfolio-5.webp" alt="MSME Manufacturing Dashboard" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-7.webp" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/portfolio-7.webp" alt="Employment Analysis Chart" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/portfolio-8.webp" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/portfolio-8.webp" alt="Gender Equity Analysis" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -146,26 +146,26 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-4.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-4.webp" alt="Data Cleaning Process" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-6.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-6.webp" alt="Training Effectiveness" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-11.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-11.webp" alt="Sector Analysis" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-12.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-12.webp" alt="Power BI Dashboard" class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
 
               <div class="tech-stack-badges" data-aos="fade-up" data-aos-delay="300">
-                <span>Angular</span>
-                <span>Express.js</span>
-                <span>PostgreSQL</span>
-                <span>GraphQL</span>
-                <span>Firebase</span>
+                <span>Power BI</span>
+                <span>Python</span>
+                <span>SQL</span>
+                <span>Excel</span>
+                <span>Pandas</span>
               </div>
             </div>
           </div>
@@ -174,30 +174,30 @@
             <div class="portfolio-details-content">
               <div class="project-meta">
                 <div class="badge-wrapper">
-                  <span class="project-badge">UX/UI Design</span>
+                  <span class="project-badge">MEL Quantitative Analysis</span>
                 </div>
                 <div class="date-client">
                   <div class="meta-item">
                     <i class="bi bi-calendar-check"></i>
-                    <span>September 2024</span>
+                    <span>November 2025</span>
                   </div>
                   <div class="meta-item">
                     <i class="bi bi-buildings"></i>
-                    <span>DigitalCraft Solutions</span>
+                    <span>Kenya MSME Manufacturing</span>
                   </div>
                 </div>
               </div>
 
-              <h2 class="project-title">Innovative Financial Dashboard App</h2>
+              <h2 class="project-title">MEL Quantitative Case Study - Kenya MSME Manufacturing Analysis</h2>
 
               <div class="project-website">
                 <i class="bi bi-link-45deg"></i>
-                <a href="#" target="_blank">projectwebsite.example.com</a>
+                <a href="https://github.com/Ocholar/mel-case-study-kenya" target="_blank">github.com/Ocholar/mel-case-study-kenya</a>
               </div>
 
               <div class="project-overview">
                 <p class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et. Aenean eu enim justo. Vestibulum aliquam hendrerit molestie.
+                  A comprehensive analysis of 5,016 MSME firms in Kenya's manufacturing sector. This project demonstrates expertise in data analysis, quantitative reasoning, and translating insights into actionable recommendations.
                 </p>
 
                 <div class="accordion project-accordion" id="portfolio-details-projectAccordion">
@@ -209,7 +209,7 @@
                     </h2>
                     <div id="portfolio-details-collapse-1" class="accordion-collapse collapse show" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Cras ultricies ligula sed magna dictum porta. Nulla quis lorem ut libero malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Pellentesque in ipsum id orci porta dapibus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+                        <p>Comprehensive quantitative analysis examining employment patterns, training effectiveness, and gender equity across Kenya's manufacturing sector. The study processed data from 5,016 firms to identify key drivers of MSME growth and employment generation.</p>
                       </div>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                     </h2>
                     <div id="portfolio-details-collapse-2" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere blandit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Sed porttitor lectus nibh.</p>
+                        <p>Analyzing complex manufacturing data to understand employment patterns, assess training program effectiveness, and identify gender equity gaps across diverse industrial sectors. Required robust data cleaning and quality assessment to resolve 5 critical data issues.</p>
                       </div>
                     </div>
                   </div>
@@ -235,7 +235,7 @@
                     </h2>
                     <div id="portfolio-details-collapse-3" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Donec sollicitudin molestie malesuada. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.</p>
+                        <p>Implemented comprehensive data analysis pipeline using Python and Power BI, creating interactive dashboards for stakeholder engagement. Developed 8-sector classification using ISIC codes and produced professional presentation with actionable recommendations for MSME development.</p>
                       </div>
                     </div>
                   </div>
@@ -243,28 +243,28 @@
               </div>
 
               <div class="project-features" data-aos="fade-up" data-aos-delay="300">
-                <h3><i class="bi bi-stars"></i> Key Features</h3>
+                <h3><i class="bi bi-stars"></i> Key Findings</h3>
                 <div class="row g-3">
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Real-time Data Visualization</li>
-                      <li><i class="bi bi-check2-circle"></i> User Role Management</li>
-                      <li><i class="bi bi-check2-circle"></i> Secure Authentication</li>
+                      <li><i class="bi bi-check2-circle"></i> 11,277 jobs generated across sample</li>
+                      <li><i class="bi bi-check2-circle"></i> Training increases efficiency by 8.1%</li>
+                      <li><i class="bi bi-check2-circle"></i> Female-owned firms: 39.8% of employment</li>
                     </ul>
                   </div>
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Customizable Dashboards</li>
-                      <li><i class="bi bi-check2-circle"></i> Data Export Options</li>
-                      <li><i class="bi bi-check2-circle"></i> Multi-device Support</li>
+                      <li><i class="bi bi-check2-circle"></i> Food, Textiles, Wood dominate (62%)</li>
+                      <li><i class="bi bi-check2-circle"></i> 8-sector ISIC classification</li>
+                      <li><i class="bi bi-check2-circle"></i> 5,016 firms analyzed</li>
                     </ul>
                   </div>
                 </div>
               </div>
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                <a href="#" class="btn-view-project">View Live Project</a>
-                <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="https://github.com/Ocholar/mel-case-study-kenya" class="btn-view-project">View Full Analysis</a>
+                <a href="portfolio.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -286,14 +286,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
 
