Revise portfolio metadata and project details
Updated portfolio details including title, description, and keywords. Modified project descriptions and links to reflect current work and expertise.

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio - FolioOne Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Portfolio - Reagan Ochola | Data Analytics & MEL Specialist</title>
+  <meta name="description" content="Portfolio of Reagan Ochola - Data Analytics & MEL Specialist specializing in agricultural data, Power BI dashboards, and quantitative analysis for development organizations.">
+  <meta name="keywords" content="Data Analytics, MEL, Agriculture, Power BI, SQL, Quantitative Analysis, Kenya, East Africa">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 
@@ -79,7 +79,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -93,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>Transforming agricultural data into actionable intelligence through MEL frameworks, Power BI dashboards, and quantitative analysis across East Africa.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -101,128 +101,128 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-strategy">Strategy</li>
-            <li data-filter=".filter-finance">Finance</li>
-            <li data-filter=".filter-operations">Operations</li>
-            <li data-filter=".filter-technology">Technology</li>
+            <li data-filter=".filter-mel">MEL & Analytics</li>
+            <li data-filter=".filter-agriculture">Agriculture</li>
+            <li data-filter=".filter-dashboard">Dashboards</li>
+            <li data-filter=".filter-research">Research</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-research">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-1.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-1.webp" alt="MSME Manufacturing Analysis" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-1.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Business Growth Strategy</h4>
-                  <p>Strategic Planning</p>
+                  <h4>MEL Quantitative Case Study</h4>
+                  <p>Kenya MSME Manufacturing Analysis - 5,016 firms</p>
                   <div class="portfolio-tags">
-                    <span>Strategy</span>
-                    <span>Consulting</span>
+                    <span>MEL</span>
+                    <span>Quantitative Analysis</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-dashboard">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-2.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-2.webp" alt="Maize Yield Dashboard" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Financial Restructuring</h4>
-                  <p>Financial Advisory</p>
+                  <h4>East Africa Maize Yield Insights</h4>
+                  <p>Interactive dashboard for 18,000+ farmers across Kenya, Rwanda, Tanzania</p>
                   <div class="portfolio-tags">
-                    <span>Finance</span>
-                    <span>Investment</span>
+                    <span>Power BI</span>
+                    <span>Agriculture</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-agriculture filter-research">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-3.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-3.webp" alt="Agricultural Imagery Analysis" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-3.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Supply Chain Optimization</h4>
-                  <p>Operations Management</p>
+                  <h4>AgroImageryTimeline</h4>
+                  <p>SQL + Python analysis of 85,000+ field images for maize crop monitoring</p>
                   <div class="portfolio-tags">
-                    <span>Operations</span>
-                    <span>Logistics</span>
+                    <span>Python</span>
+                    <span>SQL</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-agriculture">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-4.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-4.webp" alt="AgroDashboard" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Digital Transformation</h4>
-                  <p>Technology Consulting</p>
+                  <h4>AgroDashboard</h4>
+                  <p>Plotly Dash visualization for maize yield across East Africa with geospatial clustering</p>
                   <div class="portfolio-tags">
-                    <span>Technology</span>
-                    <span>Innovation</span>
+                    <span>Plotly Dash</span>
+                    <span>Geospatial</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mel filter-agriculture">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-5.webp" alt="Field Data Collection" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Market Expansion</h4>
-                  <p>Strategic Planning</p>
+                  <h4>Field Data Collection System</h4>
+                  <p>Managed 50+ field officers across Mt. Kenya Region with >95% data accuracy</p>
                   <div class="portfolio-tags">
-                    <span>Strategy</span>
-                    <span>Growth</span>
+                    <span>MEL</span>
+                    <span>Field Operations</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dashboard filter-mel">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/portfolio-6.webp" alt="Power BI Dashboard" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Investment Strategy</h4>
-                  <p>Financial Advisory</p>
+                  <h4>Farmer Performance Dashboard</h4>
+                  <p>Real-time tracking of crop adoption, repayment rates, and farmer outcomes</p>
                   <div class="portfolio-tags">
-                    <span>Finance</span>
-                    <span>Investment</span>
+                    <span>Power BI</span>
+                    <span>Dashboard</span>
                   </div>
                 </div>
               </div>
@@ -232,7 +232,7 @@
         </div>
 
         <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="400">
-          <a href="#portfolio" class="btn btn-primary">View All Case Studies</a>
+          <a href="https://github.com/Ocholar" class="btn btn-primary">View All Projects on GitHub</a>
         </div>
 
       </div>
@@ -251,14 +251,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
 
