--- a/resume.html
+++ b/resume.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Resume - FolioOne Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Resume - Reagan Ochola | Data Analytics & MEL Specialist</title>
+  <meta name="description" content="Resume of Reagan Ochola - Experienced Data Analytics & MEL Specialist with 8+ years in agricultural development, Power BI dashboards, and quantitative analysis.">
+  <meta name="keywords" content="MEL, Data Analytics, Agriculture, Power BI, SQL, Resume, Kenya, East Africa">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com " rel="preconnect">
+  <link href="https://fonts.gstatic.com " rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital ,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: https://bootstrapmade.com/license/ 
   ======================================================== -->
 </head>
 
@@ -79,7 +79,7 @@
         <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -93,7 +93,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium totam rem aperiam</p>
+        <p>Experienced Data Analytics & MEL Specialist with 8+ years transforming agricultural data into actionable intelligence across East Africa.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -107,17 +107,17 @@
 
               <div class="resume-content">
                 <article class="education-item">
-                  <h4>Master of Computer Science</h4>
-                  <h5>2019 - 2021</h5>
-                  <p class="institution"><em>Stanford University, California</em></p>
-                  <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+                  <h4>Master of Science</h4>
+                  <h5>2015 - 2017</h5>
+                  <p class="institution"><em>Jomo Kenyatta University of Agriculture and Technology (JKUAT)</em></p>
+                  <p>Leadership & Capacity Building focus</p>
                 </article>
 
                 <article class="education-item">
-                  <h4>Bachelor of Computer Science</h4>
-                  <h5>2015 - 2019</h5>
-                  <p class="institution"><em>Massachusetts Institute of Technology</em></p>
-                  <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis delectus nihil temporibus sapiente</p>
+                  <h4>Bachelor of Science</h4>
+                  <h5>2010 - 2014</h5>
+                  <p class="institution"><em>Egerton University, Kenya</em></p>
+                  <p>Leadership & Capacity Building</p>
                 </article>
               </div>
             </div><!-- End Education Section -->
@@ -128,30 +128,44 @@
 
               <div class="resume-content">
                 <div class="skill-item">
-                  <h4>Frontend Development</h4>
+                  <h4>Power BI & Data Visualization</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>Backend Development</h4>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <h4>UI/UX Design</h4>
+                  <h4>SQL & Database Management</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>Project Management</h4>
+                  <h4>Advanced Excel & Data Analysis</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <h4>Python for Data Analysis</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <h4>MEL & Field Operations</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <h4>Leadership & Capacity Building</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
               </div>
@@ -165,42 +179,63 @@
 
               <div class="resume-content">
                 <article class="experience-item">
-                  <h4>Senior Software Engineer</h4>
-                  <h5>2021 - Present</h5>
-                  <p class="company"><em>Google, Mountain View, CA</em></p>
+                  <h4>MEL Team Lead</h4>
+                  <h5>Jan 2023 - Present</h5>
+                  <p class="company"><em>One Acre Fund, Mt. Kenya Region</em></p>
                   <ul>
-                    <li>Lead in the development, implementation, and optimization of web applications using modern technologies</li>
-                    <li>Delegate tasks to the 7 members of the development team and provide counsel on all aspects of the project</li>
-                    <li>Supervise the assessment of all web applications, mobile apps, and software platforms for quality and efficiency</li>
-                    <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                    <li>Led field data collection teams of 50 officers across diverse agricultural regions, ensuring >95% data accuracy</li>
+                    <li>Designed and rolled out data validation frameworks that cut survey errors by 35%, strengthening farmer performance tracking</li>
+                    <li>Built interactive Power BI dashboards that allowed leadership to monitor crop adoption, repayment rates, and farmer outcomes in real time</li>
+                    <li>Coordinated weekly data review meetings with field teams and senior managers, translating technical data findings into clear operational decisions</li>
+                    <li>Conducted back-checks and spot audits that identified systemic gaps, leading to improved farmer support strategies</li>
+                    <li>Mentored MEL officers on advanced Excel, SQL basics, and dashboard interpretation, raising internal capacity for data-driven decision-making</li>
                   </ul>
                 </article>
 
                 <article class="experience-item">
-                  <h4>Software Engineer</h4>
-                  <h5>2019 - 2021</h5>
-                  <p class="company"><em>Microsoft, Redmond, WA</em></p>
+                  <h4>Junior Enumerator Officer</h4>
+                  <h5>Feb 2019 - Dec 2022</h5>
+                  <p class="company"><em>One Acre Fund, Njoro, Nakuru, Kenya</em></p>
                   <ul>
-                    <li>Developed numerous marketing programs (logos, brochures, infographics, presentations, and advertisements)</li>
-                    <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                    <li>Recommended and consulted with clients on the most appropriate software platforms</li>
-                    <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                    <li>Conducted field surveys on core MEL programs: Maize Crop Mix and Planting Compliance, Potatoes, Vegetables, Trees and Agroforestry, Market surveys</li>
+                    <li>Maintained high data quality standards across diverse agricultural data collection activities</li>
+                    <li>Supported field operations in rural agricultural communities across Kenya</li>
                   </ul>
                 </article>
 
                 <article class="experience-item">
-                  <h4>Junior Software Developer</h4>
-                  <h5>2017 - 2019</h5>
-                  <p class="company"><em>Apple Inc., Cupertino, CA</em></p>
+                  <h4>Graduate Researcher</h4>
+                  <h5>Apr 2016 - May 2018</h5>
+                  <p class="company"><em>RUFORUM at Egerton University, Kenya</em></p>
                   <ul>
-                    <li>Implemented responsive websites and web applications using modern JavaScript frameworks</li>
-                    <li>Collaborated with senior developers to maintain and optimize existing applications</li>
-                    <li>Participated in code reviews and contributed to team documentation efforts</li>
-                    <li>Assisted in the development of RESTful APIs and microservices</li>
+                    <li>Conducted field research on project implementation in rural farming communities, focusing on farmer adoption of new practices</li>
+                    <li>Produced reports that highlighted bottlenecks in project rollout, informing donor-funded program adjustments</li>
+                    <li>Applied quantitative and qualitative methods to assess project outcomes and recommend scalable improvements</li>
                   </ul>
                 </article>
               </div>
             </div><!-- End Experience Section -->
+
+            <!-- Certifications Section -->
+            <div class="resume-item" data-aos="fade-up" data-aos-delay="200">
+              <h3 class="resume-title">Certifications & Training</h3>
+
+              <div class="resume-content">
+                <article class="certification-item">
+                  <h4>BCG - Introduction to Data for Decision Makers Job Simulation</h4>
+                  <h5>Sep 2025</h5>
+                  <p class="issuer"><em>Forage</em></p>
+                  <p>Credential ID: FwidRNkse64Enfyrs</p>
+                </article>
+
+                <article class="certification-item">
+                  <h4>Career Essentials in Data Analysis by Microsoft and LinkedIn</h4>
+                  <h5>Sep 2025</h5>
+                  <p class="issuer"><em>Microsoft</em></p>
+                  <p>Data Analysis, Data Analytics</p>
+                </article>
+              </div>
+            </div><!-- End Certifications Section -->
           </div>
         </div>
 
@@ -220,14 +255,14 @@
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/reagan-ochola-aba10927"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: https://bootstrapmade.com/license/  -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
       </div>
     </div>
 
