--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Reagan Ochola</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Contact - Reagan Ochola | Strategic MEL Leader & Data Analytics Specialist</title>
+  <meta name="description" content="Contact Reagan Ochola - Strategic MEL leader with 9+ years designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs across East Africa.">
+  <meta name="keywords" content="MEL, Data Analytics, Power BI, SQL, Python, Agriculture, Kenya, East Africa, Contact, Reagan Ochola, Consulting">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: FolioOne
-  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/ 
+  * Template URL: https://bootstrapmade.com/folioone-bootstrap-portfolio-website-template/   
   * Updated: Aug 23 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/ 
+  * License: https://bootstrapmade.com/license/   
   ======================================================== -->
 </head>
 
@@ -40,11 +40,6 @@
 
   <header id="header" class="header d-flex align-items-center light-background sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
-
-      <!-- <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-      <img src="assets/img/logo.webp" alt="">
-      <h1 class="sitename">FolioOne</h1> 
-    </a> -->
 
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -93,7 +88,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Ready to transform your data into actionable intelligence? Let's discuss how we can improve business outcomes together.</p>
+        <p>Ready to optimize your MEL systems and transform agricultural data into actionable insights? Let's discuss your multi-country program needs.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -102,7 +97,7 @@
           <div class="col-lg-5">
             <div class="info-box" data-aos="fade-up" data-aos-delay="200">
               <h3>Contact Info</h3>
-              <p>Based in Nairobi, Kenya, I specialize in agricultural data analytics and MEL consulting for organizations across East Africa.</p>
+              <p>Based in Nairobi, Kenya, I specialize in MEL consulting for multi-country donor-funded agricultural and development programs across East Africa.</p>
 
               <div class="info-item" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
@@ -120,9 +115,9 @@
                   <i class="bi bi-telephone"></i>
                 </div>
                 <div class="content">
-                  <h4>Phone Number</h4>
-                  <p>+254720821051</p>
-                  <p>Preferred: Email</p>
+                  <h4>Phone</h4>
+                  <p>+254 720 821 051</p>
+                  <p>Available Mon-Fri, 8AM-6PM EAT</p>
                 </div>
               </div>
 
@@ -131,9 +126,9 @@
                   <i class="bi bi-envelope"></i>
                 </div>
                 <div class="content">
-                  <h4>Email Address</h4>
+                  <h4>Email</h4>
                   <p>reaochola@gmail.com</p>
-                  <p>Via LinkedIn: reagan-ochola-aba10927</p>
+                  <p>Response within 24 hours</p>
                 </div>
               </div>
             </div>
@@ -142,7 +137,7 @@
           <div class="col-lg-7">
             <div class="contact-form" data-aos="fade-up" data-aos-delay="300">
               <h3>Get In Touch</h3>
-              <p>Interested in data analytics, MEL consulting, or discussing how data can improve business outcomes? I'd love to hear from you.</p>
+              <p>Interested in optimizing your MEL systems, developing data governance protocols, or implementing real-time analytics across your agricultural programs? I'd love to hear from you.</p>
 
               <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
                 <div class="row gy-4">
@@ -156,11 +151,11 @@
                   </div>
 
                   <div class="col-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject (e.g., Agricultural Data Analytics, MEL Consulting)" required="">
+                    <input type="text" class="form-control" name="subject" placeholder="Subject (e.g., MEL Framework Development, Power BI Dashboard, Data Governance)" required="">
                   </div>
 
                   <div class="col-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message (Tell me about your agricultural data challenges or MEL needs)" required=""></textarea>
+                    <textarea class="form-control" name="message" rows="6" placeholder="Message (Tell me about your multi-country program challenges, donor reporting requirements, or data analytics needs)" required=""></textarea>
                   </div>
 
                   <div class="col-12 text-center">
@@ -200,9 +195,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/  -->
+        <!-- Licensing information: https://bootstrapmade.com/license/   -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/ ">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/  ">BootstrapMade</a>
       </div>
     </div>
 
