Revise headline for clarity and conciseness

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Strategic MEL Leader</span>
-              <h2 class="headline">Hi, I'm Reagan - transforming complex agricultural data into evidence-based insights across East Africa</h2>
+              <h2 class="headline">Hi, I'm Reagan - I transform complex datasets into evidence-based insights</h2>
               <p class="lead">
                 Strategic MEL leader with 9+ years of experience designing robust monitoring, evaluation, and learning frameworks for multi-country donor-funded programs. Adept at translating complex data into actionable insights to drive evidence-based decision-making and enhance program sustainability.
               </p>
